gitops/overlays/garu-home/music/navidrome/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: music
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: "music.garu.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: navidrome
  tls:
    - hosts:
        - music.garu.me
      secretName: garu-io-music-cert
---
